text remain visible during webfont load fixed for performance improvement

--- a/altcommercewebsit/css/style-fixed.css
+++ b/altcommercewebsit/css/style-fixed.css
@@ -314,9 +314,9 @@
 }
 
 @media screen and (max-width: 414px) {
-  .services_subheading{
-    
-  }
+  /* .services_subheading{
+;
+  } */
   .pad_rem{
     padding:0px;
   }
